fixed project-wide margin overflow by applying overflow:hidden to #root

--- a/src/index.css
+++ b/src/index.css
@@ -6,11 +6,12 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    /* outline: 1px solid red; */
 }
+
 html{
     scroll-behavior: smooth;
 }
+
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap');
 
 :root {
@@ -31,8 +32,6 @@ body{
     background: var(--color-bg);
     font-family: var(--font-family);
     color: white;
-    /* overflow-x: hidden; */
-
 }
 
 @layer base{
@@ -106,6 +105,11 @@ a{
 	-webkit-animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
 	animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
 }
+
+#root{
+  overflow: hidden;
+}
+
 
  @-webkit-keyframes scale-up-center {
     0% {
